--- a/CheckIt/Base.lproj/LaunchScreen.storyboard
+++ b/CheckIt/Base.lproj/LaunchScreen.storyboard
@@ -18,12 +18,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Tl9-CA-n45">
-                                <frame key="frameInset" minX="87" minY="287" width="201" height="93"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Tl9-CA-n45">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="201" id="l4E-Mx-mbT"/>
+                                    <constraint firstAttribute="height" constant="93" id="vlb-3L-irw"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Tl9-CA-n45" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="XeN-sC-Yuh"/>
+                            <constraint firstItem="Tl9-CA-n45" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Yhl-Dz-Px2"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
