--- a/CheckIt/Views/CollectionViewCells/CIHomeCollectionViewCell.xib
+++ b/CheckIt/Views/CollectionViewCells/CIHomeCollectionViewCell.xib
@@ -9,10 +9,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CIHomeCollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="187" height="187"/>
+            <rect key="frame" x="0.0" y="0.0" width="250" height="187"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="187" height="187"/>
+                <rect key="frame" x="0.0" y="0.0" width="250" height="187"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FH3-Jk-j3s"/>
@@ -35,6 +35,7 @@
                     </view>
                 </subviews>
             </view>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="FH3-Jk-j3s" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="3NJ-fU-X6B"/>
                 <constraint firstAttribute="bottom" secondItem="FH3-Jk-j3s" secondAttribute="bottom" id="JEp-JO-6ic"/>
