Set workflow for questions, and basic style with dummy data lol

--- a/CheckIt/ViewControllers/Feed/CIHomeViewController.xib
+++ b/CheckIt/ViewControllers/Feed/CIHomeViewController.xib
@@ -18,7 +18,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="S44-Sm-TYd">
-                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.92942708333333335" green="0.20867427316641904" blue="0.083053229626083941" alpha="1" colorSpace="calibratedRGB"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="iK9-j0-h7c">
                         <size key="itemSize" width="187" height="160"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
