--- a/CheckIt/ViewControllers/Feed/CIStoryViewController.xib
+++ b/CheckIt/ViewControllers/Feed/CIStoryViewController.xib
@@ -27,7 +27,7 @@
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Raw-xb-twy">
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="alj-qv-q1R">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Syrian refugees between war and crackdown" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="alj-qv-q1R">
                             <constraints>
                                 <constraint firstAttribute="width" constant="318" id="GWN-Y0-eHV"/>
                                 <constraint firstAttribute="height" constant="48" id="vJm-tm-DDe"/>
